--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -6,17 +6,25 @@
     <title>Document</title>
 </head>
 <style>
-    body{height: 100vh; 
+    body{height: 100vh; /*
     background-color: black;
     background-image: url('imagens/wallpaper002.jpg');
     background-position:center center;
     background-repeat: no-repeat;  
     background-size: cover;     
     background-repeat: no-repeat;
+    background-attachment: fixed;
+
+     shorthand- background
+    color > image > position > repeat > [size](nao esta funcionando) > attachment
+    */
+
+    background: black url('imagens/wallpaper002.jpg') center no-repeat  fixed;
+    background-size: cover;
 }
 
     main{ background-color: aliceblue;
-        width: 400px;
+        max-width: 400px;
         padding: 10px;
         margin: auto;
         border: 1px solid blue;
@@ -26,7 +34,10 @@
 </style>
 <body>
     <main><h1>Teste de imagem de fundo</h1>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Libero assumenda, cupiditate quos animi facere totam architecto vero nam aspernatur corrupti iusto quibusdam modi autem! Iusto pariatur aspernatur obcaecati unde ad.</p>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Libero assumenda, cupiditate quos animi facere totam architecto vero nam aspernatur corrupti iusto quibusdam modi autem! Iusto pariatur aspernatur obcaecati unde ad. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum, ratione impedit voluptatum possimus eveniet, quidem autem, sequi at rerum nulla alias dolore ipsa consequatur doloremque consequuntur velit ab cumque. Velit.</p>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut laboriosam blanditiis sequi nisi eveniet! Esse nihil quod, delectus illo doloremque accusamus in earum sapiente quasi placeat porro reprehenderit sequi ea! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque repellat, consequatur doloremque recusandae veniam reprehenderit perspiciatis fugit libero numquam. Dolore, id sit! Ut exercitationem nemo eius consequuntur officia debitis facilis?</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id quibusdam rem voluptatibus voluptatum ducimus quos debitis pariatur sapiente rerum voluptatem, architecto impedit. Rerum reprehenderit voluptas consectetur. Laboriosam maxime provident quasi. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eveniet fuga voluptatum excepturi accusamus dolores odit fugiat quos aperiam, assumenda asperiores reiciendis laborum a velit accusantium earum facere ipsa tempora? Incidunt.</p>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsa consequatur necessitatibus dolore dolores voluptatum corporis aspernatur perspiciatis quos laborum, exercitationem error voluptate officiis earum unde quisquam nemo voluptas dicta ea! Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit dolores numquam similique at. Et laudantium architecto consequatur, magni at excepturi quia distinctio sit sunt praesentium aspernatur quo, consequuntur ad nisi!</p>
     </main>
 </body>
 </html>
