--- a/exercicios/ex024/iframe001.html
+++ b/exercicios/ex024/iframe001.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Estudos de iframe</title>
+    <style>
+        iframe{width: 500px; height: 400px;border: 2px solid red;}
+    </style>
 </head>
 <body>
     <h1>Testando o uso de um iframe</h1>
-    <p>Acesso o site Cursoemvideo para aprender a programar</p>
-</body>
+    <p>Acesso o site do <!--Tamanho padra 300x150-->
+       <iframe src="https://www.cursoemvideo.com/" frameborder="0" height="500px" ></iframe>
+        para aprender a programar</p>
+<p>O repositorio do guanabara <iframe src="https://www.gustavoguanabara.github.io" frameborder="0"><a href="https://www.gustavoguanabara.github.io" target="_blank"></a></iframe>tambem é legal</p>
+   </body>
 </html>
