--- a/exercicios/ex024/iframe002.html
+++ b/exercicios/ex024/iframe002.html
@@ -17,7 +17,7 @@
     <h1>Teste com iframe</h1>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Recusandae adipisci eaque aperiam, consequuntur tempora a omnis nesciunt consectetur rerum consequatur soluta non veritatis aut nostrum saepe quaerat laudantium exercitationem quos. Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis delectus vero ipsa non, consequuntur sequi sed cum quia tempore voluptas mollitia beatae iusto optio eveniet itaque omnis assumenda quae reiciendis.</p>
 
-    <iframe src="pag001.html" frameborder="0" height="500" width="500"></iframe>
+    <iframe src="paginas-extras/pag001.html" frameborder="0" height="500" width="500"></iframe>
 
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maxime ad illo consequatur, labore aliquam quaerat molestias ea consequuntur repellendus? Inventore amet sed accusamus quos laboriosam, voluptatem repudiandae dolor facere neque? Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates quos impedit nam. Eius sequi fugiat id vero eveniet iusto, quaerat, suscipit error ex repellendus magnam harum? Aspernatur repudiandae tempora totam!</p>
 </body>
