--- a/exercicios/ex024/iframe003.html
+++ b/exercicios/ex024/iframe003.html
@@ -24,7 +24,7 @@
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus illum qui voluptates officiis animi ullam repellat nobis corporis hic totam blanditiis corrupti libero, veniam consequuntur quo possimus tempora, accusantium omnis. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatem nulla veritatis, commodi quae pariatur, in maxime dolore illum quod magni similique alias odit labore quidem adipisci, eos aliquam sequi mollitia.</p>
 
-    <iframe src="#" frameborder="0" id="tela" name="frame">
+    <iframe id="tela" name="frame" srcdoc="<h1> Escolha uma das opçoes acima</h1>\ <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa laborum minima mollitia eaque. Illum quam vel, dicta consequuntur fuga, sit eius dolorem officiis unde deleniti autem sed voluptatibus earum repellendus.</p><img src='imagens/crystal.png'>">
         <p>Infelizmente seu navegador não é compativel com isso. </p>
     </iframe>
     
