--- a/exercicios/ex025/form002.html
+++ b/exercicios/ex025/form002.html
@@ -16,7 +16,7 @@
             <input type="password" name="sen" id="isen">
         </p>
         <p>
-            <input type="submit" value="enviar">
+            <input type="submit" value="Enviar">
             <input type="reset" value="Limpar">            
         </p>
 
