--- a/exercicios/ex025/form002.html
+++ b/exercicios/ex025/form002.html
@@ -7,13 +7,13 @@
 </head>
 <body>
     <h1>Teste de Formulário</h1>
-    <form action="">
+    <form action="cadastro.php" method="post" autocomplete="on">
         <p><label for="insu">Usuário:</label>
-            <input type="text" name="usu" id="iusu">
+            <input type="text" name="usu" id="iusu" required minlength="5" maxlength="30" size="10" placeholder="nome do Usuário">
         </p>
         <p>
             <label for="isen">Senha:</label>
-            <input type="password" name="sen" id="isen">
+            <input type="password" name="sen" id="isen" required minlength="8" maxlength="20" size="3">
         </p>
         <p>
             <input type="submit" value="Enviar">
@@ -22,4 +22,4 @@
 
     </form>
 </body>
-</html>
+</html> 
