--- a/exercicios/ex025/form003.html
+++ b/exercicios/ex025/form003.html
@@ -27,7 +27,7 @@
         </p>
         <p>
             <label for="ihora">Horario da Prova</label>
-            <input type="time" name="Hora"  id="ihora>      
+            <input type="time" name="Hora"  id="ihora">      
 
         </p>
 
