--- a/exercicios/ex025/form003.html
+++ b/exercicios/ex025/form003.html
@@ -30,6 +30,11 @@
             <input type="time" name="Hora"  id="ihora">      
 
         </p>
+        <p>
+            <input type="submit" value="Enviar">
+            <input type="submit" value="Limpar">
+
+        </p>
 
 
 
