--- a/exercicios/ex025/form005.html
+++ b/exercicios/ex025/form005.html
@@ -23,7 +23,7 @@
         </fieldset>
         <p>
             <input type="submit" value="Enviar">
-            <input type="submit" value="Limpar">
+            <input type="reset" value="Limpar">
         </p>
     </form>
 </body>
