--- a/exercicios/ex026/mq001/index.html
+++ b/exercicios/ex026/mq001/index.html
@@ -4,8 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media Query</title>
+    <!-- Chamadas Media Query -->
+    <link rel="stylesheet" href="estilos/tela.css" media="screen">
+    <link rel="stylesheet" href="estilos/impressora.css" media="print">
 </head>
 <body>
-    <h1>Ola mundo</h1>
+    <header>
+        <h1>Notícias</h1>
+        <menu>
+            <ul>
+                <li>Esportes</li>
+                <li>Política</li>
+                <li>Tecnologia</li>
+            </ul>
+        </menu>
+    </header>
+    <main>
+        <article>
+            <h2>Estou aprendendo a criar Media Queries</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum perferendis maxime recusandae similique quasi ullam ipsum distinctio laboriosam laborum eligendi? Tenetur saepe, inventore in dicta expedita nam dolorum reiciendis eligendi. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt ipsa recusandae, at consequatur illo, dolorum quasi fuga eum maxime voluptatem, vel in ad provident? Exercitationem cumque aliquam voluptas impedit magni.</p>
+
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione harum repudiandae explicabo earum cum! Labore, eius illum a unde provident tempore? Fuga accusamus consequatur modi aliquid iusto earum reiciendis odio? Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia eligendi error consequatur sit soluta ad similique atque qui laboriosam, modi quibusdam sequi saepe! Quo deserunt consequatur maiores necessitatibus quas architecto.</p>
+           
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque tempora expedita ipsum, incidunt est quod doloremque reiciendis adipisci ab ducimus dolore optio quaerat possimus, dolores saepe officiis ea vero dolorum!</p>
+        </article>
+
+    </main>
 </body>
 </html>
