--- a/exercicios/ex027/flex003/index.html
+++ b/exercicios/ex027/flex003/index.html
@@ -8,14 +8,13 @@
         div.container{
             background-color: lightsalmon;
             display: flex;
-          
         }
 
         div.item{
             background-color: lightskyblue;
             border: 1px solid black;
+            flex: auto;
             text-align: center;
-            padding: 10px;
         }
     </style>
 </head>
